--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>FizzBuzz</title>
   </head>
   <body>
-
+    <p id="numeri"></p>
 
 
     <script src="js/script.js" charset="utf-8"></script>
